<resources>
    <string name="app_name">Navigation Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="draw_menu_test">Stocazzo</string>
    <string name="video">Video</string>
    <string name="browser">Browser</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="wifi">WiFi</string>
    <string name="title_activity_connect">connect</string>
    <string name="title_activity_list_item">list_item</string>
    <string name="list">list</string>
    <string name="goto_wi_fi_settings">Goto Wi Fi settings…</string>
    <string name="re_scan_wi_fi_network">Re-scan Wi Fi network…</string>
    <string name="test_web_service">Test web service</string>
    <string name="pictures">Work with picture</string>
    <string name="button">Button</string>
    <string name="item">Various intents...</string>
    <string name="intents">Work with Intents</string>
</resources>
