<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_help_web_black"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/wifi" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/list" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_webservice"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/test_web_service" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_pictures"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/pictures" />
            <item
                android:id="@+id/nav_intents"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/intents" />
        </menu>
    </item>



</menu>
